--- a/fun and testing/stac site/stac.html
+++ b/fun and testing/stac site/stac.html
@@ -5,19 +5,107 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>St. Andrew's College</title>
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="extra.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row bg-primary text-light">
-            <div class="col-12 col-md-6 text-left">
-                <h1 class="display-1">LOGO</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-stac p-3">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item" style="width: auto;">
+                        <img src="./images/staclogo.png" class="image-fluid" style="width: 30%; height:auto;">
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active text-light text-start" aria-current="page" href="#">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active text-light text-start" aria-current="page" href="#">News</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle text-light text-start" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                About Us
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="#">Our Staff</a></li>
+                                <li><a class="dropdown-item" href="#">Learning at Stac</a></li>
+                                <li><a class="dropdown-item" href="#">Rector's comment</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle text-light text-nowrap" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle"></i> Book a tour
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">I love stac</a></li>
+                        <li><a class="dropdown-item" href="#">Not sure what to put here</a></li>
+                        <li><a class="dropdown-item" href="#">Ethan stinks</a></li>
+                    </ul>
+                </div>
+
+                <form class="d-flex">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2">
+                        <button class="btn btn-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
+                    </div>
+                </form>
             </div>
-            <div class="col-12 col-md-6 text-right">
-                <h2 class="display-3">Home Contact</h2>
+        </div>
+    </nav>
+
+    <div class="container-fluid m-2 mt-3">
+        <div class="row">
+            <div class="col bg-mint p-4 pb-5">
+                <p>
+                    <h2 class="display-5"><br>St. Andrew's College - Framing our future</h2>
+                </p>
+                <p class="text-muted">
+                    Together, building better people, for life.
+                </p>
+                <hr class="divider">
+                <p>Our vision is to be at the leading edge of high performance educational practice, in a community hich values caring for others, tradition and creativity, in order to provide young people with the roots and wings to flourish in an ever-changing world.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-4 mt-4">
+                <div class="card">
+                    <img src="./images/chapel.jpg" class="card-img-top" alt="...">
+                    <span class="p-3">
+                        <h5 class="display-15">Beautiful facilities</h5>
+                        <p>Built after the 2011 earthquakes, our award-winning chapel is a great place to be at peace.</p>
+                    </span>
+                </div>
+            </div>
+            <div class="col-4 mt-4">
+                <div class="card">
+                    <img src="./images/rugby.jpg" class="card-img-top" alt="...">
+                    <span class="p-3">
+                        <h5 class="display-15">Competitive sports</h5>
+                        <p>We have highly-qualified coaches in a wide variety of sports.</p>
+                    </span>
+                </div>
+            </div>
+            <div class="col-4 mt-4">
+                <div class="card">
+                    <img src="./images/production.jpg" class="card-img-top" alt="...">
+                    <span class="p-3">
+                        <h5 class="display-15">The arts</h5>
+                        <p>Our stunning productions are amazing and enthrall their audiences.</p>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
